<resources>
    <string name="APP_NAME">IQWhizz</string>
    <string name="LOGO">LOGO</string>

    <string name="WELCOME">Bienvenue</string>

    <string name="USERPASS_REQUIRED">Nom d\'utilisateur et mot de passe requis</string>
    <string name="INVALID_PASSWORD">Mot de passe incorrect</string>
    <string name="INVALID_USER">Utilisateur introuvable</string>

    <string name="USED_USERNAME">Nom d\'utilisateur déjà emprunté</string>
    <string name="INEXISTANT_USER">Ce joueur n\'existe pas</string>
    <string name="REGISTER_SUCCESS">Inscription réussie</string>

    <string name="NOT_LOGGED">Merci de vous (re)connecter</string>
    <string name="SURE_DISCONNECT">Pressez à nouveau pour vous déconnecter</string>
    <string name="CANNOT_BACK">Quitter vous fera perdre cette question</string>

    <string name="TIMEOUT">Temps écoulé ! Question suivante</string>
    <string name="NOT_IMPLEMENTED_YET">Fonctionnalité pas encore disponible..</string>
    <string name="NO_GAME_PLAYED">Aucun historique.. Il faut d\'abord jouer une partie ;)</string>

    <string name="FRIEND_INVITED">Demande d\'ajout d\'ami envoyée</string>
    <string name="ALREADY_FRIEND">Vous êtes déjà ami avec %username%</string>
    <string name="ALREADY_INVITED">Demande déjà envoyée, en attente..</string>
    <string name="MYSELF_INVITED">Vous ne pouvez pas vous inviter en ami</string>

    <string name="WAITING">En attente..</string>
    <string name="FRIENDS">Amis</string>
    <string name="FIGHT">Affronter</string>

    <!-- User common strings -->
    <string name="USERNAME">Pseudo</string>
    <string name="PASSWORD">Mot de passe</string>
    <string name="BIRTHDATE">Date de naissance</string>
    <string name="CITY">Ville</string>
    <string name="GENDER">Sexe</string>

    <!-- MainActivity (login) -->
    <string name="login_subtitle">Connecte toi</string>
    <string name="login_button">Connexion</string>
    <string name="login_registerButton">Pas encore de compte ? Clique ici !</string>

    <string name="login_enter_pseudo">Insérez votre pseudo</string>
    <string name="login_enter_password">Et votre mot de passe</string>

    <!-- RegisterActivity (register) -->
    <string name="register_subtitle">Création d\'un nouveau compte</string>
    <string name="register_button">Inscription</string>

    <!-- UserActivity (account) -->
    <string name="profile_play">JOUER</string>
    <string name="profile_continue">REPRENDRE</string>
    <string name="profile_history">Historique</string>
    <string name="profile_settings">Paramètres</string>
    <string name="profile_myfriends">Mes amis</string>

    <!-- ChooseMode -->
    <string name="mode">Mode</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_speed">Rapide</string>
    <string name="mode_categories">Catégories</string>
    <string name="mode_multiplayer">Affronter un ami</string>

    <!-- CategoryActivity -->
    <string name="category_0">Catégories</string>
    <string name="mode_logique">Raisonnement logique</string>
    <string name="mode_numerique">Raisonnement numérique</string>
    <string name="mode_spatial">Raisonnement spatial</string>
    <string name="mode_verbal">Raisonnement verbal</string>
    <string name="category_5">Géographie</string>

    <!-- HistoryActivity -->
    <string name="history">Historique</string>
    <string name="history_friends">AMIS</string>
    <string name="history_back">RETOUR</string>

    <!-- SettingsActivity -->
    <string name="settings_volume">Volume</string>
    <string name="settings">Paramètres</string>
    <string name="settings_mdp">Changer le mot de passe</string>
    <string name="change_mdp">Changer le mot de passe</string>
    <string name="changemdp_subtitle1">Mot de passe actuel</string>
    <string name="changemdp_subtitle2">Introduire le nouveau mot de passe</string>
    <string name="changemdp_subtitle3">Confirmer le nouveau mot de passe</string>
    <string name="confirm_mdp">Confirmer</string>



    <!-- GameActivity -->
    <string name="Suivant">Suivant</string>
    <string name="Temps">Temps</string>

    <!-- ModeActivity -->
    <string name="warning">Attention</string>
    <string name="mode_footer">Vous ne disposez que d\'une minute par énigme. Passé ce délais, l\'épreuve sera considérée comme échouée. Il en va de même si vous quittez l\'application.</string>

    <string name="mode_multiplayer_description">Ce mode de jeu vous permet de vous amuser tout en vous confrontant à vos amis.</string>
    <string name="mode_speed_description">Ce mode de jeu a pour vocation de  vous amuser ou de vous échauffer mentalement avant un test réel. </string>
    <string name="mode_normal_description">Ce mode de jeu est le véritable test de QI, vous disposez de 40 minutes pour le réaliser. Après quoi votre QI vous sera donné. </string>
    <string name="mode_logique_description">Mode logique</string>
    <string name="mode_numerique_description">Mode numérique</string>
    <string name="mode_spatial_description">Mode spatial</string>
    <string name="mode_verbal_description">Mode verbal</string>

    <string name="mode_time_5">5\"</string>
    <string name="mode_time_40">40\"</string>
    <string name="game_start">C\'est parti !</string>

    <!-- addFriendActivity -->
    <string name="addfriend_pseudoText">Entrez le pseudo de votre ami</string>
    <string name="addfriend_buttonText">Ajouter</string>
    <string name="addfriend_addheaderText">Ajouter un ami</string>

    <!-- myFriendsActivity -->
    <string name="myfriend_headerText">Mes amis</string>
    <string name="myfriend_addFriend">Ajouter un ami</string>

    <string name="password_actual">Mot de passe actuel</string>
    <string name="password_new">Introduire le nouveau mot de passe</string>
    <string name="password_repeat">Confirmer le nouveau mot de passe</string>


</resources>
