<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".controller.GameActivity">

    <Button
        android:id="@+id/choose_numeriqueButton"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/whiteborder"
        android:onClick="onModeClick"
        android:text="@string/mode_numerique"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/choose_spatialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_logiqueButton" />

    <Button
        android:id="@+id/choose_spatialButton"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/whiteborder"
        android:onClick="onModeClick"
        android:text="@string/mode_spatial"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/choose_verbalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_numeriqueButton" />

    <Button
        android:id="@+id/choose_verbalButton"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/whiteborder"
        android:onClick="onModeClick"
        android:text="@string/mode_verbal"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_spatialButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:contentDescription="@string/APP_NAME"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/header_appname"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/APP_NAME"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/header_applogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/LOGO"
        android:src="@drawable/app_logo_puzzle"
        app:layout_constraintBottom_toBottomOf="@+id/header_appname"
        app:layout_constraintEnd_toStartOf="@+id/header_appname"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/header_appname" />


    <TextView
        android:id="@+id/mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/category_0"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/choose_logiqueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_appname" />

    <Button
        android:id="@+id/choose_logiqueButton"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/whiteborder"
        android:onClick="onModeClick"
        android:text="@string/mode_logique"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/choose_numeriqueButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_title" />


</androidx.constraintlayout.widget.ConstraintLayout>