<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".controller.user.HistoryActivity">

    <TextView
        android:id="@+id/historique"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/history_buttonNormal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/whiteborder"
        android:onClick="updateHistory"
        android:text="@string/mode_normal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/history_buttonSpeed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historique" />

    <Button
        android:id="@+id/history_buttonSpeed"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/whiteborder"
        android:onClick="updateHistory"
        android:text="@string/mode_speed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/history_buttonFriends"
        app:layout_constraintStart_toEndOf="@+id/history_buttonNormal"
        app:layout_constraintTop_toBottomOf="@+id/historique" />

    <Button
        android:id="@+id/history_buttonFriends"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/whiteborder"
        android:onClick="updateHistory"
        android:text="@string/history_friends"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/history_buttonSpeed"
        app:layout_constraintTop_toBottomOf="@+id/historique" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:contentDescription="@string/APP_NAME"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/header_appname"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/APP_NAME"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/header_applogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/LOGO"
        android:src="@drawable/app_logo_puzzle"
        app:layout_constraintBottom_toBottomOf="@+id/header_appname"
        app:layout_constraintEnd_toStartOf="@+id/header_appname"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/header_appname" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_buttonSpeed">

        <TableLayout
            android:id="@+id/history_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:stretchColumns="*">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/NO_GAME_PLAYED"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>