<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:id="@+id/activity_addfriend">

    <Button
        android:id="@+id/friend_button"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="224dp"
        android:background="@drawable/whiteborder"
        android:clickable="true"
        android:onClick="addNewFriend"
        android:text="@string/addfriend_buttonText"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/white"
        android:contentDescription="@string/APP_NAME"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


<TextView
    android:id="@+id/header_appname"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginStart="8dp"
    android:fontFamily="sans-serif-black"
    android:text="@string/APP_NAME"
    android:textAllCaps="false"
    android:textColor="@color/colorPrimary"
    android:textSize="36sp"
    android:typeface="normal"
    app:layout_constraintEnd_toEndOf="@+id/imageView"
    app:layout_constraintHorizontal_bias="0.292"
    app:layout_constraintStart_toStartOf="@+id/imageView"
    app:layout_constraintTop_toTopOf="@+id/imageView" />

<TextView
    android:id="@+id/addfriend_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/addfriend_addheaderText"
    android:textAlignment="center"
    android:textColor="@android:color/white"
    android:textSize="50sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />



<ImageView
    android:id="@+id/header_applogo"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:contentDescription="@string/LOGO"
    android:src="@drawable/app_logo_puzzle"
    app:layout_constraintBottom_toBottomOf="@+id/header_appname"
    app:layout_constraintEnd_toStartOf="@+id/header_appname"
    app:layout_constraintStart_toStartOf="@+id/imageView"
    app:layout_constraintTop_toTopOf="@+id/header_appname" />

    <TextView
        android:id="@+id/addfriend_setText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="408dp"
        android:gravity="center"
        android:text="@string/addfriend_pseudoText"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_title"
        app:layout_constraintVertical_bias="0.815" />

    <EditText
        android:id="@+id/friend_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>