<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".controller.GameActivity">

    <Button
        android:id="@+id/question_rep1"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/whiteborder"
        android:text="@string/mode_multiplayer"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/question_rep2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Réponse " />

    <Button
        android:id="@+id/question_rep2"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/whiteborder"
        android:text="@string/mode_multiplayer"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/question_rep1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Réponse " />

    <Button
        android:id="@+id/question_rep4"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whiteborder"
        android:text="@string/mode_multiplayer"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/question_rep3"
        app:layout_constraintTop_toBottomOf="@+id/question_rep2"
        tools:text="Réponse " />

    <Button
        android:id="@+id/question_rep3"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/whiteborder"
        android:text="@string/mode_multiplayer"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/question_rep4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_rep1"
        tools:text="Réponse " />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:contentDescription="@string/APP_NAME"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/header_appname"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/APP_NAME"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/header_applogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/LOGO"
        android:src="@drawable/app_logo_puzzle"
        app:layout_constraintBottom_toBottomOf="@+id/header_appname"
        app:layout_constraintEnd_toStartOf="@+id/header_appname"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/header_appname" />

    <Button
        android:id="@+id/pg_suivante"
        android:layout_width="190dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/whiteborder"
        android:text="@string/Suivant"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quesion_timer"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="380dp"
        android:text="@string/Temps"
        app:layout_constraintBottom_toTopOf="@+id/question_rep2"
        app:layout_constraintStart_toEndOf="@+id/header_appname" />

</androidx.constraintlayout.widget.ConstraintLayout>

